<resources>
    <string name="app_name">IDG Capital</string>
    <string name="app_name_info">IDG Capital</string>
    <string name="action_settings">Settings</string>
    <string name="cloud_works">Cloud works</string>
    <string name="empty_str">--</string>
    <string name="app_tips">提\u0020\u0020示</string>
    <string name="no_power_hint">无权访问</string>
    <string name="ok">确\u0020\u0020\u0020定</string>
    <string name="allow">允\u0020\u0020许</string>
    <string name="deny">拒\u0020\u0020绝</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="add">添加</string>
    <string name="minLines_3">2</string>
    <string name="server_failure">服务器出错！</string>
    <string name="check_network_status">请检查网络连接</string>
    <string name="had_no_data">暂无数据</string>
    <string name="not_found_img">图片不存在</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期日</string>
    <string name="network_disable">当前网络不可用,请检查网络设置</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">释放立即刷新</string>
    <string name="header_hint_refresh_loading">刷新中&#8230;</string>
    <string name="header_hint_refresh_time">时间:</string>
    <string name="footer_hint_load_normal">加载更多...</string>
    <string name="footer_hint_load_ready">释放立即加载更多</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="net_error">访问网络失败</string>
    <string name="empty_message">没有数据</string>
    <string name="error_message">发生错误了...</string>
    <string name="empty_button">再试一次</string>
    <string name="loading_button">取消</string>
    <string name="error_button">再试一次</string>
    <string name="loading_message">请稍等</string>
    <string name="failed">failed</string>
    <string name="done">done</string>
    <string name="opinion">意\t见:</string>
    <string name="title_activity_my_document">MyDocumentActivity</string>
    <string name="title_activity_document2">Document2Activity</string>
    <string name="my_document">我的文档</string>
    <string name="im_work_circle_message">消息</string>
    <string name="im_mine_collect">收藏</string>
    <string name="if_delete_cache">是否清除本地缓存？</string>
    <string name="delete_cache">清除本地缓存</string>
    <string name="send_two_code">发送客户端地址/二维码</string>
    <string name="sd_setting_business">事务审批</string>
    <string name="clear_cache">清除本地缓存(1KB)</string>
    <string name="new_app">版本升级</string>
    <string name="login_out">退出登录</string>
    <string name="sumbit">确\u0020\u0020\u0020认</string>
    <string name="delete">刪\u0020\u0020\u0020除</string>
    <string name="sure">确认</string>
    <string name="im_notice">消息通知</string>
    <string name="accouncement">公告</string>
    <string name="work_log">工作报告</string>
    <string name="order">工作任务</string>
    <string name="share">分享</string>
    <string name="work_report">工作报告</string>
    <string name="leave">请假</string>
    <string name="cost">费用</string>
    <string name="travel">差旅</string>
    <string name="workreport">事务申请</string>
    <string name="specialworkreport">特殊事务申请</string>
    <string name="customer_type">全部</string>
    <string name="login">登&#160;&#160;&#160;录</string>
    <string name="login_new">登\u0020\u0020\u0020\u0020录</string>
    <string name="register_title">注\u0020\u0020\u0020\u0020册</string>
    <string name="login_password">请填写密码</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="Is_landing">正在登录...</string>
    <string name="list_is_for">正在获取通讯录...</string>
    <string name="get_data_fail">获取失败，网络异常</string>
    <string name="response_fail">获取失败，网络异常</string>
    <string name="new_trip">新建行程</string>
    <string name="new_trip_title">新建标题</string>
    <string name="new_trip_start_time">开始时间</string>
    <string name="trip_period">重复周期</string>
    <string name="trip_period_not">永不</string>
    <string name="trip_remind">提醒</string>
    <string name="trip_add_remark">添加备注</string>
    <string name="trip_close_remind">关闭提醒</string>
    <string name="trip_alerm_title_remind">行程提醒</string>
    <string name="new_trip_success">操作成功</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_trip">删除行程</string>
    <string name="trip_remind_not">无</string>
    <string name="trip_starttime_can_not_currenttime">开始时间不能小于当前时间</string>
    <string name="trip_currenttime_must_samll_remindtime">当前时间已超过提醒时间</string>
    <string name="trip_endtime_can_not_starttime">结束时间不能小于开始时间</string>
    <string name="new_trip_all_day">全天</string>
    <string name="new_trip_period_everyday">每天</string>
    <string name="new_trip_period_everyweek">每周</string>
    <string name="new_trip_period_everymonth">每月</string>
    <string-array name="trip_period_data">
        <item>永不</item>
        <item>每天</item>
        <item>每周</item>
        <item>每月</item>
    </string-array>
    <string name="trip_punctuality_remind">准点提醒</string>
    <string name="trip_minutes">分钟前</string>
    <string name="trip_hours">小时前</string>
    <string name="trip_days">天前</string>
    <string name="trip_weeks">周前</string>
    <string-array name="trip_remind_data">
        <item>无</item>
        <item>准点提醒</item>
        <item>5分钟前</item>
        <item>10分钟前</item>
        <item>15分钟前</item>
        <item>30分钟前</item>
        <item>1小时前</item>
        <item>2小时前</item>
        <item>1天前</item>
        <item>2天前</item>
        <item>1周前</item>
    </string-array>
    <string name="save">保存</string>
    <string name="sd_setting_set_approve_del_finish">完成</string>
    <string name="data_not_whole">资料不完整!</string>
    <string name="clean_draft_item">删除该条草稿</string>
    <string name="clean_draft_all">清空草稿箱</string>
    <string name="contasts_pic">头像</string>
    <string name="contasts_name">姓名</string>
    <string name="crm_cluesetsex">设置性别</string>
    <string name="select_time">选择时间</string>
    <string name="editpersonaldata">编辑信息</string>
    <string name="person_data">个人信息</string>
    <string name="person_psw">密码</string>
    <string name="person_name">姓名</string>
    <string name="person_account">账号</string>
    <string name="person_sex">性别</string>
    <string name="Is_post">正在提交...</string>
    <string name="Is_search">正在搜索...</string>
    <string name="search_not_user">抱歉，你搜索的用户不存在！</string>
    <string name="person_info_altersuccess">个人信息修改成功！</string>
    <string name="password_change_success">密码修改成功，请重新登录！</string>
    <string name="person_info_alterfail">个人信息修改失败！</string>
    <string name="person_email">邮箱</string>
    <string name="person_phone">电话</string>
    <string name="please_select_way">请选择方式</string>
    <string name="please_select_sex">选择性别</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="personal_hint_old_password">请输入原密码</string>
    <string name="personal_hint_new_password">请输入新密码</string>
    <string name="personal_hint_new_again_password">请再次输入新密码</string>
    <string name="request_succeed">提交成功</string>
    <string name="request_succeed2">发送成功</string>
    <string name="request_fail">提交失败</string>
    <string name="request_fail_data">获取失败，网络繁忙</string>
    <string name="search_new">搜</string>
    <string name="address_list">通讯录</string>
    <string name="not_download">未下载:</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="voice_l">语　　音:</string>
    <string name="sign_l">发送位置:</string>
    <string name="file_l">附　　　件:</string>
    <string name="menu_permssion_hint">您没有权限使用该功能</string>
    <string name="link_customer_l">关联客户(1):</string>
    <string name="link_person_l">关联联系人(1):</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="location_message">位置信息</string>
    <string name="button_send">发\u0020\u0020送</string>
    <string name="Is_to_create_a_group_chat">正在创建群聊...</string>
    <string name="Failed_to_create_groups">创建群组失败</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="recording_error">录音失败</string>
    <string name="button_pushtotalk">按住 说话</string>
    <string name="confirm_to_finish_voice_group">是否结束此会议?</string>
    <string name="voice_group_is_finish">该会议已经结束！</string>
    <string name="theme">主题:</string>
    <string name="host">主持人:</string>
    <string name="error_load_meeting_list">加载会议记录失败！</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_voice_call">语音聊天</string>
    <string name="attach_video_call">视频通话</string>
    <string name="attach_hot_chat">阅后即焚</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="forward">转发</string>
    <string name="attach_take_pic">拍照</string>
    <string name="kefu_not_online">抱歉,客服不在线！</string>
    <string name="edit_your_phone">请输入手机号</string>
    <string name="edit_your_nick">请输入内容</string>
    <string name="cancel">取消</string>
    <string name="send">提交</string>
    <string name="reply">回复</string>
    <string name="p_semail">填写您要发送的邮箱</string>
    <string name="p_cemail">填写您要抄送的邮箱</string>
    <string name="p_content">请输入内容</string>
    <string name="p_title">请填写标题！！</string>
    <string name="rec_l">收件人：</string>
    <string name="cc_l">抄　送：</string>
    <string name="theme_l">主　题：</string>
    <string name="at_more">最多</string>
    <string name="integer_number">位整数</string>
    <string name="running_config">正在配置中...</string>
    <string name="save_suceess">发送成功</string>
    <string name="operation_fails">操作失败，请检查网络是否正常</string>
    <string name="p_camera">拍照</string>
    <string name="phone">账\u0020\u0020\u0020\u0020号</string>
    <string name="register_graph_code">图形码</string>
    <string name="verify_code">验证码</string>
    <string name="pleaseinputmobilephonehint">请输入账号</string>
    <string name="pleaseinputcodehint">请输入图形码</string>
    <string name="pleaseinputvalidatecode">请填写验证码</string>
    <string name="getcodehint">获取验证码</string>
    <string name="nexthint">下一步</string>
    <string name="register_password">密\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020码
    </string>
    <string name="register_input_finish">完\u0020\u0020\u0020\u0020成</string>
    <string name="cn_register_company_name">姓&#8195;&#8195;名</string>
    <string name="cn_hint_register_company_name">请填写姓名</string>
    <string name="cn_register_email">邮\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020箱</string>
    <string name="cn_hint_register_email">请填写邮箱账号</string>
    <string name="cn_register_card_account">续费卡号</string>
    <string name="cn_hint_register_card_account">请填写续费卡号</string>
    <string name="cn_hint_register_card_password">请填写续费密码</string>
    <string name="personnel_affairs">人事事务</string>
    <string name="entry_request">入职申请</string>
    <string name="departure_request">离职申请</string>
    <string name="salary_application">调薪申请</string>
    <string name="transaction_request">异动申请</string>
    <string name="work_name">员工姓名：</string>
    <string name="cc">抄送：</string>
    <string name="work_department">工作部门：</string>
    <string name="job_title">工作职务：</string>
    <string name="marriage">婚姻：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄：</string>
    <string name="education">学历：</string>
    <string name="contact_information">联系方式：</string>
    <string name="entry_time">入职时间：</string>
    <string name="work_user_form">用工形式：</string>
    <string name="salary">薪资：</string>
    <string name="entry_note">入职说明：</string>
</resources>