<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/login_bg_color"
                android:orientation="vertical">
    <include
        android:id="@+id/title_super"
        layout="@layout/sd_top_title"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include
        android:id="@+id/top_bar_layout"
        layout="@layout/top_title_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_bar_layout"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/l_text_size_16"
            />
            <tablayout.view.textview.FontEditext
                android:id="@+id/etMobilePhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:hint="@string/pleaseinputmobilephonehint"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:textColorHint="@color/color_login_hint"
                android:textSize="@dimen/sp14"
            />
        </LinearLayout>

        <include layout="@layout/erp_line_one_view_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_graph_code"
                android:textSize="@dimen/l_text_size_16"
            />

            <tablayout.view.textview.FontEditext
                android:id="@+id/etCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:hint="@string/pleaseinputcodehint"
                android:paddingLeft="15dp"
                android:textColorHint="@color/color_login_hint"
                android:textSize="@dimen/sp14"
            />
            <ImageView
                android:id="@+id/ivShowCode"
                android:layout_width="80dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <include layout="@layout/erp_line_one_view_login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/verify_code"
                android:textSize="@dimen/l_text_size_16"
            />

            <tablayout.view.textview.FontEditext
                android:id="@+id/etMesgCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@android:color/transparent"
                android:gravity="left|center_vertical"
                android:hint="@string/pleaseinputvalidatecode"
                android:paddingLeft="15dp"
                android:textColorHint="@color/color_login_hint"
                android:textSize="@dimen/sp14"
            />
            <com.view.TimeButton
                android:id="@+id/btnGetValidateCode"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/register_bt_bg"
                android:gravity="center"
                android:text="@string/getcodehint"
                android:textColor="@color/btn_white_normal"
                android:textSize="@dimen/ss_text_size_title"/>
        </LinearLayout>

        <include layout="@layout/erp_line_one_view_login"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/register_bt_bg"
            android:text="@string/nexthint"
            android:textColor="@color/btn_white_normal"
            android:textSize="@dimen/l_text_size_17"
        />
    </LinearLayout>
</RelativeLayout>
